// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Retry should allow partial override 1`] = `
{
  "delay": 1000,
  "delayMax": 30000,
  "jitter": false,
  "maxRetries": 10,
  "multiplier": 2,
  "strategy": "constant",
}
`;

exports[`Retry should stage retry metadata with all options 1`] = `
{
  "delay": 500,
  "delayMax": 10000,
  "jitter": true,
  "maxRetries": 5,
  "multiplier": 3,
  "strategy": "linear",
}
`;

exports[`Retry should stage retry metadata with custom options 1`] = `
{
  "delay": 2000,
  "delayMax": 30000,
  "jitter": false,
  "maxRetries": 5,
  "multiplier": 2,
  "strategy": "exponential",
}
`;

exports[`Retry should stage retry metadata with defaults 1`] = `
{
  "delay": 1000,
  "delayMax": 30000,
  "jitter": false,
  "maxRetries": 3,
  "multiplier": 2,
  "strategy": "constant",
}
`;
